# infracents

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INTERVIEW_GUIDE.md  LICENSE  MEDIUM_BLOG.md  Makefile  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  deploy-backend.yml  deploy-frontend.yml  pricing-update.yml
backend/: .dockerignore  Dockerfile  __init__.py  config.py  docker-compose.yml  main.py  requirements-dev.txt  requirements.txt
backend/api/: billing.py  dashboard.py  health.py  webhooks.py
backend/models/: billing.py  github.py  pricing.py  terraform.py
backend/pricing_data/: __init__.py  aws_pricing.py  gcp_pricing.py  resource_mappings.py
backend/services/: billing_service.py  cache_service.py  cost_calculator.py  github_service.py  pricing_engine.py  terraform_parser.py
backend/utils/: formatting.py  rate_limiter.py  security.py
database/: schema.sql  seed.sql
database/migrations/: 001_initial.sql
docs/: API.md  ARCHITECTURE.md  BUSINESS.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  PRICING-ENGINE.md  SECURITY.md
frontend/: next.config.js  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/dashboard/[repo]/: page.tsx
frontend/src/app/dashboard/settings/: page.tsx
frontend/src/components/: CostChart.tsx  Footer.tsx  Navbar.tsx  PRCostTable.tsx  PricingCard.tsx
frontend/src/lib/: api.ts  stripe.ts  utils.ts
infra/cloudflare/: dns.tf
infra/terraform/: cloud-run.tf  database.tf  iam.tf  main.tf  outputs.tf  variables.tf
tests/: __init__.py  conftest.py  test_cost_calculator.py  test_formatting.py  test_pricing_engine.py  test_terraform_parser.py  test_webhooks.py
